# llama.cpp-seq2seq

./: CMakeLists.txt
beam-search/: CMakeLists.txt  target_language.md
beam-search/src/: beam-search.h  llama-context_extend.cpp  llama-graph.cpp  llama-model.cpp  nllb-enc.cpp
sd/: CMakeLists.txt  ggml_extend.hpp  rng.hpp  sd.h  util.h
seq2seq/src/: llama-arch_extend.cpp  llama-arch_extend.h  llama-context_extend.h  llama-model.h  models.h  nllb-dec.cpp
third/llama.cpp/common/: speculative.cpp
third/llama.cpp/src/: llama-arch.cpp  llama-context.cpp
third/llama.cpp/tools/server/: server-common.cpp  server-common.h  server-context.cpp  server-task.cpp  server-task.h
