cmake_minimum_required(VERSION 3.20)
project("sd_llama.cpp" C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(LLAMA_BUILD_COMMON ON CACHE BOOL "" FORCE)
set(LLAMA_BUILD_TOOLS ON CACHE BOOL "" FORCE)
set(LLAMA_BUILD_SERVER ON CACHE BOOL "" FORCE)
set(LLAMA_HTTPLIB ON CACHE BOOL "" FORCE)

set(SD_LLAMA_CPP_CUDA_DEFAULT ON)
if(APPLE)
    set(SD_LLAMA_CPP_CUDA_DEFAULT OFF)
elseif(DEFINED ENV{WSL_DISTRO_NAME} OR DEFINED ENV{WSL_INTEROP})
    set(SD_LLAMA_CPP_CUDA_DEDAULT OFF)
endif()
option(SD_LLAMA_CPP_CUDA "Enable CUDA backend when building sd_llama.cpp" ${SD_LLAMA_CPP_CUDA_DEDAULT})
if(DEFINED LOCAL_AI_RUNTIME_LLAMA_CUDA AND LOCAL_AI_RUNTIME_CUDA)
    set(SD_LLAMA_CPP_CUDA ON CACHE BOOL "" FORCE)
endif()
if(APPLE)
    set(SD_LLAMA_CPP_CUDA OFF CACHE BOOL "" FORCE)
endif()
if(SD_LLAMA_CPP_CUDA)
    set(GGML_CUDA ON CACHE BOOL "" FORCE)
else()
    set(GGML_CUDA OFF CACHE BOOL "" FORCE)
endif()

set(LLAMA_CPP_SOURCE_DIR_OVERRIDE "" CACHE PATH "Override llama.cpp source dir for sd_llama.cpp")
if(NOT LLAMA_CPP_SOURCE_DIR_OVERRIDE STREQUAL "" AND EXISTS "${LLAMA_CPP_SOURCE_DIR_OVERRIDE}/CMakeLists.txt")
    set(LLAMA_CPP_SOURCE_DIR "${LLAMA_CPP_SOURCE_DIR_OVERRIDE}")
    set(LLAMA_CPP_BINARY_DIR "${LLAMA_CPP_SOURCE_DIR}/third_party/llama.cpp")
    add_subdirectory("${LLAMA_CPP_SOURCE_DIR}" "${LLAMA_CPP_BINARY_DIR}")
else()
    set(LLAMA_CPP_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/third_party/llama.cpp")
    set(LLAMA_CPP_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/third_party/llama.cpp")
    add_subdirectory("third_party/llama.cpp")
endif()

set(LLAMA_CPP_SOURCE_DIR "${LLAMA_CPP_SOURCE_DIR}" CACHE INTERNAL "llama.cpp source dir in use")
set(LLAMA_CPP_BINARY_DIR "${LLAMA_CPP_BINARY_DIR}" CACHE INTERNAL "llama.cpp binary dir in use")
add_subdirectory(sd)
add_subdirectory(beam-search)
